--- a/stylesheets/portfolio.css
+++ b/stylesheets/portfolio.css
@@ -10,8 +10,6 @@ a {
 
 .name, .name a {
   font-size: 40px;
-  margin-top: -10px;
-  margin-left: 10px;
   float: left;
   text-decoration: none;
 }
@@ -37,7 +35,8 @@ a {
 
 video {
   width: 100%;
-  margin-bottom: 10px;
+  margin-bottom: 12px;
+  margin-left: -30px;
 }
 
 video:hover { opacity: 0.3;}
@@ -52,17 +51,14 @@ video:hover { opacity: 0.3;}
   text-align: center;
 }
 
-#design-projects {
+.design-projects {
   display: block;
-  margin-top: 80px;
+  margin-top: 20px;
 }
 
 .individual-project {
-  float: left;
-  width: 50%;
-  height: 60%;
   font-size: 1.3em;
-  padding: 15px;
+  margin: 20px 0;
 }
 
 .write-up {
