--- a/stylesheets/about.css
+++ b/stylesheets/about.css
@@ -37,15 +37,20 @@ a:visited {
 color: black;
 }
 
+.about-me .intro {
+  margin-top: 60px;
+}
+
 .about-me p {
   color: black;
   font-size: 1.4em;
-  margin: 20px 80px;
+  margin: 0 200px;
   font-family: 'Roboto';
 }
 
+
 #fist-pump {
-  margin: 50px 0 20px 50px;
+  margin: 50px 80px 20px 100px;
   color: #ff3dc4;
   font-weight: bold;
   font-size: 3em;
@@ -54,7 +59,7 @@ color: black;
 #halloween {
   max-width: 180px;
   border-radius: 80%;
-  margin-left: 30%;
+  margin-left: 40%;
   margin-bottom: 50px;
 }
 
