--- a/projectpotluck/scss/_download.scss
+++ b/projectpotluck/scss/_download.scss
@@ -2,7 +2,7 @@
 section.download {
     position: relative;
     padding: 150px 0;
-    color: #ffd0d0;
+    color: white;
     h2 {
         font-size: 50px;
         margin-top: 0;
