Add side project friendships

--- a/stylesheets/portfolio.css
+++ b/stylesheets/portfolio.css
@@ -44,8 +44,8 @@ a {
   font-size: 4.0vh;
   text-align: center;
 }
-
 #design-projects {
+
   display: block;
 }
 
@@ -54,7 +54,7 @@ a {
   width: 50%;
   height: 50%;
   font-size: 1.3em;
-  padding: 0 10px 0 100px;
+  padding: 0 5px 0 100px;
 }
 
 .write-up {
@@ -68,3 +68,7 @@ a {
 }
 
 .project-img:hover { opacity: 0.3;}
+
+.section-title {
+  text-align: center;
+}
