--- a/stylesheets/about.css
+++ b/stylesheets/about.css
@@ -15,62 +15,52 @@ a:visited {
   font-size: 40px;
   text-decoration: none;
   color: black;
-  margin-top: 40px;
 }
 
 .break {
   height: 150px;
 }
 
-.navright {
-  margin-top: 50px;
-  font-size: 15px;
-  list-style-type: none;
-  text-align: right;
-}
-
-.navright li {
-  display: inline;
-}
-
-.navright li a {
-color: black;
+.navigation {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  padding-top: 40px;
+  padding-left: 40px;
 }
 
 .about-me .intro {
-  margin-top: 60px;
+  margin: 0 auto;
+  padding: 60px 80px 0 80px;
 }
 
 .about-me p {
   color: black;
   font-size: 1.4em;
-  margin: 0 200px;
   font-family: 'Roboto';
 }
 
+.activity-description {
+  padding: 0 80px;
+}
 
-#fist-pump {
+.fist-pump {
   margin: 50px 80px 20px 100px;
   color: #ff3dc4;
   font-weight: bold;
   font-size: 3em;
  }
 
-#halloween {
+.halloween {
+  display: block;
   max-width: 180px;
   border-radius: 80%;
-  margin-left: 40%;
+  margin-left: auto;
+  margin-right: auto;
   margin-bottom: 50px;
 }
 
-.social-media {
-  margin-top: 20px;
-}
-
-.social-media li {
-  list-style-type: none;
-}
-
-.media-icons {
-  max-height: 20px;
+.projects {
+  text-align: center;
+  margin-bottom: 50px;
+  font-size: 20px;
 }
