--- a/stylesheets/portfolio.css
+++ b/stylesheets/portfolio.css
@@ -11,59 +11,31 @@ a {
 .name, .name a {
   font-size: 40px;
   margin-top: 20px;
-  margin-left: 30px;
-  float: left;
   text-decoration: none;
 }
 
 .break {
-  height: 10px;
+  height: 50px;
 }
 
-.navright {
-  font-size: 1em;
-  float: right;
-  list-style-type: none;
-  position: absolute;
-  top: 8%;
-  left: 75%;
-  bottom: 10%;
-}
-
-.navright li {
-  display: inline;
-  padding-left: 10px;
-}
-
-.main-info {
-  margin-top: 40px;
-  font-size: .8em;
-}
-
-#headline {
-  font-size: 4.0vh;
-  text-align: center;
-}
-
-#design-projects {
-  display: block;
+.design-projects {
+  margin: 0 auto;
+  display: grid;
+  max-width: 1136px;
+  grid-template-columns: 1fr 1fr;
+  padding: 0 40px;
 }
 
 .individual-project {
-  float: left;
-  width: 50%;
-  height: 45%;
-  font-size: 1.3em;
-  padding: 0 5px 0 150px;
+  padding-bottom: 50px;
 }
 
 .write-up {
-  font-size: 1em;
-  width: 75%;
+  width: 350px;
 }
 
 .project-img {
-  width: 70%;
+  max-width: 350px;
   padding-bottom: 10px;
 }
 
