--- a/stylesheets/coaching.css
+++ b/stylesheets/coaching.css
@@ -1,7 +1,11 @@
+* {
+  color: white;
+  background: #8095FF;
+}
+
 div#about{
   font-family: "Roboto";
   line-height: 170%;
-  background: white;
   padding: 150px 0 80px 0;
   position: relative;
 }
@@ -49,8 +53,4 @@ div#about::after {
 
 .fluid-img {
   width: 90%;
-}
-
-.text-white {
-  color: black;
 }
