--- a/stylesheets/strangers.css
+++ b/stylesheets/strangers.css
@@ -7,8 +7,13 @@ body {
 	margin: 0 auto 0 auto;
 }
 
-.overlay {
+.name {
 	font-size: 8em;
+}
+
+.description {
+	width: 70%;
+	font-size: 2em;
 }
 
 video {
@@ -22,17 +27,17 @@ video {
 	background: #fff;
 }
 
-.overlay span{
+.name span{
   	position: relative;
   	opacity: 0;
   	top: 1em;
   	animation: animateOverlay 1s ease-in-out forwards;
   }
 
-.overlay span:nth-child(4n) { animation-delay: 0s; }
-.overlay span:nth-child(4n+1) { animation-delay: 1s; }
-.overlay span:nth-child(4n+3) { animation-delay: 2s; }
-.overlay span:nth-child(4n+2) { animation-delay: 3s; }
+.name span:nth-child(4n) { animation-delay: 0s; }
+.name span:nth-child(4n+1) { animation-delay: 1s; }
+.name span:nth-child(4n+3) { animation-delay: 2s; }
+.name span:nth-child(4n+2) { animation-delay: 3s; }
 
 @keyframes animateOverlay {
   to {
