--- a/stylesheets/strangers.css
+++ b/stylesheets/strangers.css
@@ -9,22 +9,13 @@ body {
 
 .name {
 	font-size: 8em;
+	font-family: 'Open Sans Condensed', sans-serif;
 }
 
 .description {
 	width: 70%;
 	font-size: 2em;
-}
-
-video {
-	position: fixed;
-	top: 50%;
-	left: 50%;
-	min-width: 100%;
-	min-height: 100%;
-	z-index: -9999;
-	transform: translateX(-50%) translateY(-50%);
-	background: #fff;
+	font-family: 'Roboto', sans-serif;
 }
 
 .name span{
