--- a/stylesheets/strangers.css
+++ b/stylesheets/strangers.css
@@ -22,7 +22,9 @@ body {
   	animation: animateOverlay 1s ease-in-out forwards;
 }
 
-.name span:nth-child(4n+3) { animation-delay: 1s; }
+.name span:nth-child(4n) { animation-delay: 0s; }
+.name span:nth-child(4n+1) { animation-delay: 1s; }
+.name span:nth-child(4n+3) { animation-delay: 2s; }
 
 @media only screen and (min-width: 768px) {
 	.name {
