--- a/stylesheets/strangers.css
+++ b/stylesheets/strangers.css
@@ -23,25 +23,26 @@ body {
 }
 
 .name span:nth-child(1n) {
-	color: #085f63;
+	color: #ff5959;
 }
 .name span:nth-child(2n) {
-	color: #ff5959;
+	color: #085f63;
 }
 
 .name span:nth-child(5n) {
- 	color: #facf5a;
+	color: #facf5a;
 }
 .name span:nth-child(6n) {
  	color: #49beb7;
 }
 
+.name span:nth-child(9n) { animation-delay: 1s; }
+.name span:nth-child(10n) { animation-delay: 1s; }
 
-
-
-.name span:nth-child(4n) { animation-delay: 0s; }
-.name span:nth-child(4n+1) { animation-delay: 1s; }
-.name span:nth-child(4n+3) { animation-delay: 2s; }
+.name span:nth-child(11n) {
+	color: #085f63;
+	animation-delay: 2s;
+}
 
 @media only screen and (min-width: 768px) {
 	.name {
