--- a/stylesheets/creatively-fed/confetti.css
+++ b/stylesheets/creatively-fed/confetti.css
@@ -10,79 +10,58 @@
     transform: rotate(-78deg);
     animation: makeItRain 1000ms infinite ease-out;
     animation-delay: 149ms;
+    animation-fill-mode: forwards;
     animation-duration: 763ms; }
   .confetti-piece:nth-child(2) {
     left: 14%;
     transform: rotate(-26deg);
     animation: makeItRain 1000ms infinite ease-out;
     animation-delay: 200ms;
+    animation-fill-mode: forwards;
     animation-duration: 753ms; }
   .confetti-piece:nth-child(3) {
     left: 21%;
     transform: rotate(57deg);
     animation: makeItRain 1000ms infinite ease-out;
     animation-delay: 167ms;
+    animation-fill-mode: forwards;
     animation-duration: 751ms; }
   .confetti-piece:nth-child(4) {
     left: 28%;
     transform: rotate(1deg);
     animation: makeItRain 1000ms infinite ease-out;
     animation-delay: 97ms;
+    animation-fill-mode: forwards;
     animation-duration: 992ms; }
   .confetti-piece:nth-child(5) {
     left: 35%;
     transform: rotate(78deg);
     animation: makeItRain 1000ms infinite ease-out;
     animation-delay: 265ms;
+    animation-fill-mode: forwards;
     animation-duration: 988ms; }
   .confetti-piece:nth-child(6) {
     left: 42%;
     transform: rotate(13deg);
     animation: makeItRain 1000ms infinite ease-out;
     animation-delay: 277ms;
+    animation-fill-mode: forwards;
     animation-duration: 816ms; }
   .confetti-piece:nth-child(7) {
     left: 49%;
     transform: rotate(-77deg);
     animation: makeItRain 1000ms infinite ease-out;
     animation-delay: 48ms;
+    animation-fill-mode: forwards;
     animation-duration: 751ms; }
   .confetti-piece:nth-child(8) {
     left: 56%;
     transform: rotate(0deg);
+    animation-fill-mode: forwards;
     animation: makeItRain 1000ms infinite ease-out;
     animation-delay: 256ms;
     animation-duration: 890ms; }
-  .confetti-piece:nth-child(9) {
-    left: 63%;
-    transform: rotate(-47deg);
-    animation: makeItRain 1000ms infinite ease-out;
-    animation-delay: 322ms;
-    animation-duration: 1071ms; }
-  .confetti-piece:nth-child(10) {
-    left: 70%;
-    transform: rotate(24deg);
-    animation: makeItRain 1000ms infinite ease-out;
-    animation-delay: 158ms;
-    animation-duration: 1195ms; }
-  .confetti-piece:nth-child(11) {
-    left: 77%;
-    transform: rotate(31deg);
-    animation: makeItRain 1000ms infinite ease-out;
-    animation-delay: 21ms;
-    animation-duration: 881ms; }
-  .confetti-piece:nth-child(12) {
-    left: 84%;
-    transform: rotate(80deg);
-    animation: makeItRain 1000ms infinite ease-out;
-    animation-delay: 451ms;
-    animation-duration: 1169ms; }
-  .confetti-piece:nth-child(13) {
-    left: 91%;
-    transform: rotate(72deg);
-    animation: makeItRain 1000ms infinite ease-out;
-    animation-delay: 219ms;
-    animation-duration: 1094ms; }
+
   .confetti-piece:nth-child(odd) {
     background: #17d3ff; }
   .confetti-piece:nth-child(even) {
@@ -90,10 +69,12 @@
   .confetti-piece:nth-child(4n) {
     width: 5px;
     height: 12px;
+    animation-fill-mode: forwards;
     animation-duration: 2000ms; }
   .confetti-piece:nth-child(3n) {
     width: 3px;
     height: 10px;
+    animation-fill-mode: forwards;
     animation-duration: 2500ms;
     animation-delay: 1000ms; }
   .confetti-piece:nth-child(4n-7) {
@@ -101,9 +82,9 @@
 
 @keyframes makeItRain {
   from {
-    opacity: 0; }
-  50% {
     opacity: 1; }
+  50% {
+    opacity: 0; }
   to {
     transform: translateY(200px); } }
 
