--- a/stylesheets/creatively-fed/index.css
+++ b/stylesheets/creatively-fed/index.css
@@ -15,7 +15,7 @@ body {
 .description {
   margin: 0 auto;
   width: 80%;
-  font-size: 2em;
+  font-size: 1em;
   font-family: 'Roboto', sans-serif;
 }
 
@@ -29,21 +29,22 @@ body {
   display: grid;
   column-gap: 50px;
 	grid-template-columns: 1fr;
-	margin-top: 400px;
+	margin-top: 100px;
 }
 
 .project-category:nth-child(1) {
 	color: #49beb7;
-	font-size: 1.3em;
+	font-size: 1.2em;
 }
 
 .first-work {
-	width: 90%;
+	padding-top: 5px;
+	width: 100%;
 }
 
 .writeup {
 	margin: 10px 15px 0 10px;
-	font-size: 1em;
+	font-size: .8em;
 }
 
 .second-work .project-img {
@@ -59,14 +60,19 @@ body {
 }
 
 .team .person-bio {
-	width: 60%;
+	width: 100%;
+	font-size: .8em;
 }
 
 .team .individual-writeup {
 	margin-bottom: 50px;
+	font-size: 1em;
 }
 
 @media only screen and (min-width: 768px) {
+	.description {
+		font-size: 2em;
+	}
 	.section { margin-top: 150px; }
 	.writeup {
 		font-size: 1.2em;
