--- a/landing/css/landing-page.css
+++ b/landing/css/landing-page.css
@@ -1,9 +1,3 @@
-/*!
- * Start Bootstrap - Landing Page v5.0.5 (https://startbootstrap.com/template-overviews/landing-page)
- * Copyright 2013-2019 Start Bootstrap
- * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-landing-page/blob/master/LICENSE)
- */
-
 body {
   font-family: 'Montserrat', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   color: black;
@@ -24,18 +18,15 @@ header.masthead {
   background-color: white;
   background-size: cover;
   padding-top: 8rem;
-  padding-bottom: 8rem;
   color: #6d6767;
 }
 
 header.masthead .overlay {
   position: absolute;
-  background-color: white;
   height: 100%;
   width: 100%;
   top: 0;
   left: 0;
-  opacity: 0.3;
 }
 
 header.masthead .mb-5 {
@@ -49,12 +40,17 @@ header.masthead h1 {
 @media (min-width: 768px) {
   header.masthead {
     padding-top: 12rem;
-    padding-bottom: 12rem;
   }
   header.masthead h1 {
     font-size: 3rem;
   }
 }
+
+/* @media (max-width: 425px) {
+  header.masthead .mb-4 {
+    margin-top: -200px;
+  }
+} */
 
 .showcase .showcase-text {
   padding: 3rem;
@@ -77,7 +73,7 @@ header.masthead h1 {
 }
 
 .features-icons {
-  padding-top: 7rem;
+  padding-top: 12rem;
   padding-bottom: 7rem;
 }
 
@@ -102,11 +98,16 @@ header.masthead h1 {
   margin-top: -20px;
   padding: 40px;
   color: white;
+  margin-bottom: 10px;
 }
 
 .testimonials {
   padding-top: 7rem;
   padding-bottom: 7rem;
+}
+
+.testimonials .title {
+  color: #4D98ED;
 }
 
 .testimonials .testimonial-item {
@@ -115,21 +116,23 @@ header.masthead h1 {
 
 .testimonials .testimonial-item img {
   max-width: 12rem;
-  -webkit-box-shadow: 0px 5px 5px 0px #adb5bd;
-  box-shadow: 0px 5px 5px 0px #adb5bd;
 }
 
 .call-to-action {
   position: relative;
-  background-color: #343a40;
+  background-color: white;
   background-size: cover;
   padding-top: 7rem;
   padding-bottom: 7rem;
 }
 
+.masthead .link {
+  margin-top: -150px;
+}
+
 .call-to-action .overlay {
   position: absolute;
-  background-color: #212529;
+  background-color: white;
   height: 100%;
   width: 100%;
   top: 0;
