--- a/landing/css/landing-page.css
+++ b/landing/css/landing-page.css
@@ -21,14 +21,6 @@ header.masthead {
   color: #6d6767;
 }
 
-header.masthead .overlay {
-  position: absolute;
-  height: 100%;
-  width: 100%;
-  top: 0;
-  left: 0;
-}
-
 header.masthead .mb-5 {
   margin-top: -200px;
 }
@@ -39,18 +31,16 @@ header.masthead h1 {
 
 @media (min-width: 768px) {
   header.masthead {
-    padding-top: 12rem;
+    padding-top: 4rem;
   }
   header.masthead h1 {
     font-size: 3rem;
   }
 }
 
-/* @media (max-width: 425px) {
-  header.masthead .mb-4 {
-    margin-top: -200px;
-  }
-} */
+.company-description {
+  font-size: 2rem;
+}
 
 .showcase .showcase-text {
   padding: 3rem;
@@ -68,12 +58,16 @@ header.masthead h1 {
 }
 
 .lead {
-  font-size: 0.7rem;
+  font-size: 1rem;
   text-align: left;
 }
 
+.listed-features {
+  margin-top: 4rem;
+}
+
 .features-icons {
-  padding-top: 12rem;
+  padding-top: 20rem;
   padding-bottom: 7rem;
 }
 
@@ -118,6 +112,10 @@ header.masthead h1 {
   max-width: 12rem;
 }
 
+.testimonials .mb-5 {
+  margin-bottom: 1rem !important;
+}
+
 .call-to-action {
   position: relative;
   background-color: white;
@@ -128,6 +126,7 @@ header.masthead h1 {
 
 .masthead .link {
   margin-top: -150px;
+  font-size: 1.4rem;
 }
 
 .call-to-action .overlay {
@@ -147,4 +146,32 @@ header.masthead h1 {
 footer.footer {
   padding-top: 4rem;
   padding-bottom: 4rem;
+}
+
+
+@media (max-width: 425px) {
+  .logo {
+    max-width: 400px;
+  }
+
+  .container {
+    width: 130%;
+  }
+
+  header.masthead .mb-4 {
+    margin-top: 40px;
+    border-size: none;
+  }
+
+  .company-description {
+    font-size: 1.5rem;
+  }
+
+  .features-icons {
+    padding-top: 6rem;
+  }
+
+  .testimonials {
+    padding-top: 0;
+  }
 }
