--- a/keea/css/landing-page.css
+++ b/keea/css/landing-page.css
@@ -3,14 +3,9 @@ body {
   color: black;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-family: 'Montserrat', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  font-weight: 700;
+.logo {
+  margin-top: -3rem;
+  margin-left: -3.5rem;
 }
 
 header.masthead {
@@ -29,6 +24,7 @@ header.masthead h1 {
   font-size: 2rem;
 }
 
+
 @media (min-width: 768px) {
   header.masthead {
     padding-top: 4rem;
@@ -39,7 +35,7 @@ header.masthead h1 {
 }
 
 .company-description {
-  font-size: 2rem;
+  font-size: 1.8rem;
 }
 
 .showcase .showcase-text {
@@ -71,20 +67,12 @@ header.masthead h1 {
   padding-bottom: 7rem;
 }
 
+.features-icons h3 {
+  font-size: 1.5rem;
+}
+
 .features-icons .features-icons-item {
   max-width: 20rem;
-}
-
-.features-icons .features-icons-item .features-icons-icon {
-  height: 7rem;
-}
-
-.features-icons .features-icons-item .features-icons-icon i {
-  font-size: 4.5rem;
-}
-
-.features-icons .features-icons-item:hover .features-icons-icon i {
-  font-size: 5rem;
 }
 
 .features-icons .integration {
@@ -102,6 +90,7 @@ header.masthead h1 {
 
 .testimonials .title {
   color: #4D98ED;
+
 }
 
 .testimonials .testimonial-item {
@@ -116,6 +105,11 @@ header.masthead h1 {
   margin-bottom: 1rem !important;
 }
 
+.testimonials h3 {
+  font-size: 1.5rem;
+}
+
+
 .call-to-action {
   position: relative;
   background-color: white;
@@ -125,7 +119,6 @@ header.masthead h1 {
 }
 
 .masthead .link {
-  margin-top: 10px;
   font-size: 1.6rem;
   color: #3d3a3a;
   padding-left: 2em;
